Agentforce/force-app/main/default/objects/User/fields/Acquired_Company__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company__c</fullName>
    <label>Acquired Company</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_of_User__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abate</fullName>
            </value>
            <value>
                <fullName>Accuro</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>FES</fullName>
            </value>
            <value>
                <fullName>Maxim</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>