Agentforce/force-app/main/default/objects/User/fields/Allocated_Office__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Office__c</fullName>
    <label>Allocated Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>