Agentforce/force-app/main/default/objects/User/fields/asknicely__Preferred_Account_NPS_Period__c.field-meta.xml
<CustomField>
    <fullName>asknicely__Preferred_Account_NPS_Period__c</fullName>
    <defaultValue>&quot;month-3&quot;</defaultValue>
    <label>AskNicely Preferred Account NPS Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>