Agentforce/force-app/main/default/objects/User/fields/AskNicely_Preferred_Account_NPS_Period__c.field-meta.xml
<CustomField>
    <fullName>AskNicely_Preferred_Account_NPS_Period__c</fullName>
    <label>AskNicely Preferred Account NPS Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>