Agentforce/force-app/main/default/objects/User/fields/Auto_Approver__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables users to bypass approval processes and auto approve records.</description>
    <inlineHelpText>Checking this box will allow this user to bypass approval processes in the system.</inlineHelpText>
    <label>Auto Approver</label>
    <type>Checkbox</type>
</CustomField>