Agentforce/force-app/main/default/objects/User/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <label>AutoNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>