Agentforce/force-app/main/default/objects/User/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>AD-282 - picklist values to represent the Business Units across the corporate types</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>