Agentforce/force-app/main/default/objects/User/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCS</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>MidCity</fullName>
            </value>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>Aktrion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>