Agentforce/force-app/main/default/objects/User/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <description>AD-35 - Track Corporate Type against a user</description>
    <label>Corporate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corporate_Type</valueSetName>
    </valueSet>
</CustomField>