Agentforce/force-app/main/default/objects/User/fields/Delegated_Authority__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Authority__c</fullName>
    <label>Delegated Authority</label>
    <relationshipName>DelegatedAuthority</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>