Agentforce/force-app/main/default/objects/User/fields/Delegated_End__c.field-meta.xml
<CustomField>
    <fullName>Delegated_End__c</fullName>
    <label>Delegation End</label>
    <type>Date</type>
</CustomField>