Agentforce/force-app/main/default/objects/User/fields/Freeze_User_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Freeze_User_Date_Time__c</fullName>
    <label>Freeze User Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>