Agentforce/force-app/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Used for Conga and PowerBI</description>
    <formula>FirstName + &quot; &quot; + LastName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>