Agentforce/force-app/main/default/objects/User/fields/Inactivity_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Email_Sent__c</fullName>
    <description>Provides the data an email was sent to a user who hasn&apos;t been active for 60 days on Salesforce.</description>
    <label>Inactivity Email Sent</label>
    <type>Date</type>
</CustomField>