Agentforce/force-app/main/default/objects/User/fields/Legacy_User_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_User_CaseSafeID__c</fullName>
    <description>Holds previous User Id from Legacy System</description>
    <externalId>true</externalId>
    <label>Legacy User CaseSafeID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>