Agentforce/force-app/main/default/objects/User/fields/Legacy_User_CaseSafeID_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_User_CaseSafeID_Source__c</fullName>
    <label>Legacy User CaseSafeID Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy AS</fullName>
            </value>
            <value>
                <fullName>Legacy OCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>