Agentforce/force-app/main/default/objects/User/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <label>Licence Type</label>
    <type>Text</type>
</CustomField>