Agentforce/force-app/main/default/objects/User/fields/LinkedIn_Sales_Navigator__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Sales_Navigator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Sales Navigator</label>
    <type>Checkbox</type>
</CustomField>