Agentforce/force-app/main/default/objects/User/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <description>Manager Email through Lookup</description>
    <formula>Manager.Email</formula>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>