Agentforce/force-app/main/default/objects/User/fields/Manager_External_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_External_Email__c</fullName>
    <label>Manager External Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>