Agentforce/force-app/main/default/objects/User/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Manager Name through Lookup</description>
    <formula>Manager.Full_Name__c</formula>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>