Agentforce/force-app/main/default/objects/User/fields/Managing_Director__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director__c</fullName>
    <description>AD-827 - lookup to another user to capture the Managing Director</description>
    <label>Managing Director</label>
    <relationshipName>User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>