Agentforce/force-app/main/default/objects/User/fields/Managing_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_Email__c</fullName>
    <description>Managing Director Email through Lookup</description>
    <formula>Managing_Director__r.Email</formula>
    <label>Managing Director Email</label>
    <type>Text</type>
</CustomField>