Agentforce/force-app/main/default/objects/User/fields/Managing_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_Name__c</fullName>
    <description>Managing Director Name through Lookup</description>
    <formula>Managing_Director__r.Full_Name__c</formula>
    <label>Managing Director Name</label>
    <type>Text</type>
</CustomField>