Agentforce/force-app/main/default/objects/User/fields/NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In addition to their main role does this user also act as an NPS Surveyor?</inlineHelpText>
    <label>NPS Surveyor</label>
    <type>Checkbox</type>
</CustomField>