Agentforce/force-app/main/default/objects/User/fields/Offboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Date__c</fullName>
    <description>AD-126 - Track the date in which a user has been offboarded from Salesforce</description>
    <label>Offboarding Date</label>
    <type>Date</type>
</CustomField>