Agentforce/force-app/main/default/objects/User/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <description>AD-125 - Track the date in which a user has been onboarded onto Salesforce</description>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>