Agentforce/force-app/main/default/objects/User/fields/Onboarding_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Email_Sent__c</fullName>
    <description>Date the user was sent an onboarding to Salesforce email</description>
    <label>Onboarding Email Sent</label>
    <type>Date</type>
</CustomField>