Agentforce/force-app/main/default/objects/User/fields/Provisioned_Role_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Role_Developer_Name__c</fullName>
    <inlineHelpText>Used in AD User Provisioning</inlineHelpText>
    <label>Provisioned Role Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>