Agentforce/force-app/main/default/objects/User/fields/Q9__Federation_Email__c.field-meta.xml
<CustomField>
    <fullName>Q9__Federation_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Federation Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>