Agentforce/force-app/main/default/objects/User/fields/Q9__IsConnecting__c.field-meta.xml
<CustomField>
    <fullName>Q9__IsConnecting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConnecting</label>
    <type>Checkbox</type>
</CustomField>