Agentforce/force-app/main/default/objects/User/fields/Q9__IsElementsUserByFederationId__c.field-meta.xml
<CustomField>
    <fullName>Q9__IsElementsUserByFederationId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elements User By FederationId</label>
    <type>Checkbox</type>
</CustomField>