Agentforce/force-app/main/default/objects/User/fields/Recharge_To__c.field-meta.xml
<CustomField>
    <fullName>Recharge_To__c</fullName>
    <label>Recharge To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>