Agentforce/force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>AD- 122 to ensure Region is Populated on a User</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Corporate_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>