Agentforce/force-app/main/default/objects/User/fields/Source_of_User__c.field-meta.xml
<CustomField>
    <fullName>Source_of_User__c</fullName>
    <description>Source of Joiner clarifies how the individual has joined.</description>
    <label>Source of User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Joiner</fullName>
                <default>true</default>
                <label>New Joiner</label>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>