Agentforce/force-app/main/default/objects/User/fields/Subteam__c.field-meta.xml
<CustomField>
    <fullName>Subteam__c</fullName>
    <label>Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>