Agentforce/force-app/main/default/objects/User/fields/System_User_Currency__c.field-meta.xml
<CustomField>
    <fullName>System_User_Currency__c</fullName>
    <description>Custom Currency field matching user&apos;s Default Currency</description>
    <label>System: User Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>