Agentforce/force-app/main/default/objects/User/fields/User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_Name__c</fullName>
    <description>Used in formula to display user Profile</description>
    <formula>Profile.Name</formula>
    <label>User Profile Name</label>
    <type>Text</type>
</CustomField>