Agentforce/force-app/main/default/objects/User/validationRules/Country_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_mandatory</fullName>
    <active>true</active>
    <description>AD-121 to ensure Country is populated on a User</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,ISBLANK(Country))</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please provide a Country</errorMessage>
</ValidationRule>