Agentforce/force-app/main/default/objects/User/listViews/Active_Aktrion_Users.listView-meta.xml
<ListView>
    <fullName>Active_Aktrion_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Corporate_Type__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>Business_Unit__c</columns>
    <columns>DEFAULT_CURRENCY</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>HAS_AUTHENTICATOR</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>aktrion</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active - Aktrion Users</label>
</ListView>