Agentforce/force-app/main/default/objects/User/listViews/Active_ANZ_Users.listView-meta.xml
<ListView>
    <fullName>Active_ANZ_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>Business_Unit__c</columns>
    <columns>Team__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>AU,NZ</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active - ANZ Users</label>
</ListView>