Agentforce/force-app/main/default/objects/User/listViews/Active_APAC_India_Users.listView-meta.xml
<ListView>
    <fullName>Active_APAC_India_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>Business_Unit__c</columns>
    <columns>Team__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Legacy_Id__c</columns>
    <columns>Legacy_User_CaseSafeID__c</columns>
    <columns>Legacy_User_CaseSafeID_Source__c</columns>
    <columns>TIMEZONE</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>IN</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>globant</value>
    </filters>
    <label>Active - APAC - India Users</label>
    <language>en_US</language>
</ListView>